fixed font sizes and spacing

--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
 .poem-link-list {
+  font-size: 1.25em;
   margin-bottom: 0;
   padding: 0;
   list-style-type: none;
